Post, Follow service implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,18 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+# MySQL Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/be_a_friend?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# Optional: Pool Configuration (if needed)
+spring.datasource.hikari.maximum-pool-size=10
 # Set the logging level for the entire application
 logging.level.root=INFO
+spring.jpa.properties.hibernate.format_sql=true
 
 # Set the logging level for a specific package or class
 logging.level.com.example.myapp=DEBUG
