--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <artifactId>bucket4j-core</artifactId>
             <version>8.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.32</version>
+        </dependency>
 
         <!-- Spring Boot Data JPA Starter -->
         <dependency>
