--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ logging.level.root=INFO
 springdoc.api-docs.enabled=true
 springdoc.swagger-ui.enabled=true
 spring.jpa.properties.hibernate.format_sql=true
-
+logging.level.org.springframework.cache=DEBUG
 # Set the logging level for a specific package or class
 logging.level.com.example.myapp=DEBUG
 logging.level.org.springframework.security=DEBUG
