--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    # Steps that will be executed in sequence
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -24,15 +23,45 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Cache Maven packages
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven
-
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn clean verify -Pcoverage
 
-      - name: Run unit tests
-        run: mvn test
+  test:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Run tests and generate coverage report
+        run: mvn test jacoco:report
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: jacoco-report
+          path: target/site/jacoco  # Path where JaCoCo generates the report
+
+  coverage:
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Download JaCoCo report
+        uses: actions/download-artifact@v3
+        with:
+          name: jacoco-report
+          path: jacoco-report
+
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v3
+        with:
+          files: jacoco-report/jacoco.xml
+          fail_ci_if_error: true  # This fails the job if coverage upload fails
