--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,21 +47,34 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: jacoco-report
-          path: custom-coverage-report  # Update this path if necessary
+          path: target/site/jacoco  # Update this path if necessary
 
-  coverage:
+  update-repo-with-report:
     runs-on: ubuntu-latest
     needs: test
 
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Download JaCoCo report
         uses: actions/download-artifact@v3
         with:
           name: jacoco-report
           path: jacoco-report
 
-      - name: Upload Coverage to Codecov
-        uses: codecov/codecov-action@v3
+      - name: Create directory for coverage report
+        run: |
+          mkdir -p coverage-reports
+          cp -r jacoco-report/* coverage-reports/
+
+      - name: Commit and push coverage report
+        uses: actions/github-script@v6
         with:
-          files: jacoco-report/jacoco.xml
-          fail_ci_if_error: true  # This fails the job if coverage upload fails        fail_ci_if_error: true  # This fails the job if coverage upload fails
+          script: |
+            const { exec } = require('@actions/exec');
+            await exec('git config --global user.name "github-actions"');
+            await exec('git config --global user.email "actions@github.com"');
+            await exec('git add coverage-reports/');
+            await exec('git commit -m "Add JaCoCo coverage report" || echo "No changes to commit"');
+            await exec('git push');
