--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,6 +49,7 @@ jobs:
           name: jacoco-report
           path: target/site/jacoco  # Update this path if necessary
 
+
   update-repo-with-report:
     runs-on: ubuntu-latest
     needs: test
@@ -69,12 +70,9 @@ jobs:
           cp -r jacoco-report/* coverage-reports/
 
       - name: Commit and push coverage report
-        uses: actions/github-script@v6
-        with:
-          script: |
-            const { exec } = require('@actions/exec');
-            await exec('git config --global user.name "github-actions"');
-            await exec('git config --global user.email "actions@github.com"');
-            await exec('git add coverage-reports/');
-            await exec('git commit -m "Add JaCoCo coverage report" || echo "No changes to commit"');
-            await exec('git push');
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "actions@github.com"
+          git add coverage-reports/
+          git commit -m "Add JaCoCo coverage report" || echo "No changes to commit"
+          git push
