--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,31 +52,26 @@ jobs:
           name: jacoco-report
           path: target/site/jacoco
 
-  update-repo-with-report:
+  coverage:
     runs-on: ubuntu-latest
-    needs: test
+    needs: unit-test
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          java-version: '17'
+          distribution: 'temurin'
 
-      - name: Download JaCoCo report
-        uses: actions/download-artifact@v3
+      - name: Generate JaCoCo report
+        run: mvn jacoco:report
+
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v3
         with:
-          name: jacoco-report
-          path: jacoco-report
-
-      - name: Create directory for coverage report
-        run: |
-          mkdir -p coverage-reports
-          cp -r jacoco-report/* coverage-reports/
-
-      - name: Commit and push coverage report
-        run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "actions@github.com"
-          git add coverage-reports/
-          git commit -m "Add JaCoCo coverage report" || echo "No changes to commit"
-          git push
+          files: target/site/jacoco/jacoco.xml
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
