--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -67,7 +67,7 @@ jobs:
           distribution: 'temurin'
 
       - name: Generate JaCoCo report
-        run: mvn jacoco:report
+        run: mvn jacoco:report -DskipIntegrationTests=true
 
       - name: Upload Coverage to Codecov
         uses: codecov/codecov-action@v3
