Added Comment Service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,3 +23,10 @@ logging.level.org.springframework.security=DEBUG
 logging.file.name=myapp.log
 spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.add-mappings=false
+# Disable error page redirection
+server.error.whitelabel.enabled=false
+
+# Return a custom error message for specific status codes
+server.error.include-message=always
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=10m
